--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>flexbox backroads</h1>
     <!-- header  -->
+    <header id="home">
+      <!--navbar-->
+      <!--hero-->
+      <div class="hero">
+        <div class="hero-banner">
+          <h1>continue exploring</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis pariatur voluptas optio aliquam hic id magnam natus culpa nisi praesentium.</p>
+          <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
+        </div>
+      </div>
+    </header>
     <!-- end of header  -->
 
     <!-- about section -->
