--- a/index.html
+++ b/index.html
@@ -31,15 +31,180 @@
     <!-- end of header  -->
 
     <!-- about section -->
+    <section class="section" id="about">
+      <div class="section-title">
+        <h2>about <span>us</span></h2>
+      </div>
+      <div class="section-center about-center">
+        <article class="about-img">
+          <img src="./images/about.jpeg" class="about-photo" alt="">
+        </article>
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis doloremque sed, quo assumenda dolorum itaque magnam sequi officiis facere nihil iste inventore perspiciatis laboriosam unde beatae numquam. Placeat, doloribus laborum.</p>
+          <a href="#" class="btn">read more</a>
+        </article>
+      </div>
+    </section>
     <!-- end of about section -->
 
     <!-- services -->
+    <section class="section services" id="services">
+      <div class="section-title">
+        <h2>our <span>services</span></h2>
+      </div>
+      <div class="section-center services-center">
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-wallet fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">
+              Saving money
+            </h4>
+            <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat a, accusantium perferendis doloribus, natus est eos et blanditiis labore maiores quidem, quia totam quos ratione?</p>
+          </div>
+        </article>
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-tree fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">
+              Endless biking
+            </h4>
+            <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat a, accusantium perferendis doloribus, natus est eos et blanditiis labore maiores quidem, quia totam quos ratione?</p>
+          </div>
+        </article>
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-socks fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">
+              amazing comfort
+            </h4>
+            <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat a, accusantium perferendis doloribus, natus est eos et blanditiis labore maiores quidem, quia totam quos ratione?</p>
+          </div>
+        </article> 
+      </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
+    <section class="section" id="featured">
+      <div class="section-title">
+        <h2>featured <span>tours</span></h2>
+      </div>
+      <div class="section-center featured-center">
+        <article class="tour-card">
+          <div class="img-container">
+            <img src="./images/tour-1.jpeg" class="tour-img" alt="">
+            <p class="tour-date">august 26 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>tibet adventure</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi reiciendis iste praesentium ex omnis, porro asperiores possimus architecto eaque exercitationem?</p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  china
+                </span>
+              </p>
+              <p>
+                6 days
+              </p>
+              <p>from $2100</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="img-container">
+            <img src="./images/tour-2.jpeg" class="tour-img" alt="">
+            <p class="tour-date">october 26 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>best of java</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi reiciendis iste praesentium ex omnis, porro asperiores possimus architecto eaque exercitationem?</p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  indonesia
+                </span>
+              </p>
+              <p>
+                11 days
+              </p>
+              <p>from $1400</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="img-container">
+            <img src="./images/tour-3.jpeg" class="tour-img" alt="">
+            <p class="tour-date">september 26 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>explore hongkong</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi reiciendis iste praesentium ex omnis, porro asperiores possimus architecto eaque exercitationem?</p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  hongkong
+                </span>
+              </p>
+              <p>
+                8 days
+              </p>
+              <p>from $5000</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="img-container">
+            <img src="./images/tour-4.jpeg" class="tour-img" alt="">
+            <p class="tour-date">december 26 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>kenya highlights</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi reiciendis iste praesentium ex omnis, porro asperiores possimus architecto eaque exercitationem?</p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  kenya
+                </span>
+              </p>
+              <p>
+                20 days
+              </p>
+              <p>from $3300</p>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="tour-btn">
+        <a href="#" class="btn">More tours</a>
+      </div>
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
+    <section class="section contact" id="contact">
+      <div class="section-center contact-center">
+        <article class="contact-title">
+          <h3>want latest tour info and updates</h3>
+          <p>sign up for newsletter and stay up to date</p>
+        </article>
+        <form action="" class="contact-form">
+          <input type="email" placeholder="email" name="email" class="form-control"/>
+          <button type="submit" class="btn-submit">Submit</button>
+        </form>
+      </div>
+    </section>
 
     <!-- end of contact -->
 
